--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,10 +1,10 @@
 .nav{
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-    background-color: whitesmoke;
+    padding: 20px;
+    background-color:aliceblue;
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
     right: 0;
     z-index: 1000;
