--- a/src/components/Dashboard/dashboard.scss
+++ b/src/components/Dashboard/dashboard.scss
@@ -2,7 +2,7 @@
   color: black;  
  background-color: aliceblue;
  width: 250px;
- height: 500px;
+ height: 580px;
  margin-left: -2%;
 
 }
@@ -18,6 +18,7 @@
 
 }
 .dev{
+    margin-top: 30%;
     
 }
 .dev:hover{
