--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,4 +1,8 @@
-.Card{
-display: block;
-padding: 30%;
+
+  .car,
+.tim {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 100%;
+  padding-right: 60%;
 }
