--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,8 +1,6 @@
 
-  .car,
-.tim {
-  display: flex;
-  justify-content: space-between;
-  margin-right: 100%;
-  padding-right: 60%;
+.car,
+.tim{
+    display: flex;
+    gap: 0%;
 }
